# kholles_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  TODO.md  docker-compose.yaml
src/: error.rs  lib.rs  list_fs.rs  main.rs  md_to_html.rs  types.rs  webhook.rs  webhook_error.rs
static/: math_rendering.js  theme.js
static/styles/: colors.css  common.css  proof.css  theme_selector.css
templates/: error.html.tera  index.html.tera  proof-list.html.tera  proof-view.html.tera  week-list.html.tera  week-view.html.tera
