[package]
name = "kholles_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
gray_matter = "0.2.8"
markdown = "1.0.0-alpha.21"
notify = "8.0.0"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
rocket_ws = "0.1.1"
serde = "1.0.217"
serde_yaml = "0.9.34"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"

[debug]
template_dir = "static/templates"

[release]
template_dir = "static/templates"
