[package]
name = "kholles_server"
version = "0.1.0"
edition = "2021"

[dependencies]
gray_matter = "0.2.8"
markdown = "1.0.0-alpha.21"
rocket = { version = "0.5.1", features = ["json"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde = "1.0.217"
serde_yaml = "0.9.34"

[debug]
template_dir = "static/templates"

[release]
template_dir = "static/templates"
